<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">对角棋</string>
    <string name="index_setting">游戏设置</string>
    <string name="index_introduction">玩法说明</string>
    <string name="index_playmode1">人机对战</string>
    <string name="index_playmode2">人人对战</string>
    <string name="index_about">关于游戏</string>
    <string name="index_playmode3">联机对战</string>
    <string name="index_offerList">推荐应用列表</string>
    <string name="index_feedback">问题反馈</string>
    <string name="setting_who_begin">对手先走:</string>
    <string name="setting_head_image">选择棋子:</string>
    <string name="setting_timer">计时:</string>
    <string name="setting_background_music">背景音乐:</string>
    <string name="setting_luozi_music">落子音效:</string>
    <string name="setting_open">开</string>
    <string name="setting_close">关</string>
    <string name="setting_is">是</string>
    <string name="setting_no">否</string>
    <string name="setting_gray_wolf">黑子</string>
    <string name="setting_red_wolf">红子</string>
    <string name="setting_level">难度设置:</string>
    <string name="setting_level_easy">容易</string>
    <string name="setting_level_hard">困难</string>
    <string name="selfman">自己</string>
    <string name="otherman">对手</string>
    <string name="chess_lose">我认输了</string>
    <string name="chess_restart">重新开始</string>
    <string name="chess_start">再来一局</string>
    <string name="title">提示</string>
    <string name="win_message">恭喜你，你赢了.....</string>
    <string name="failed_message">悲催，你输给了对手，再来一局吧....</string>
    <string name="exit_fight_message">确定要退出该局吗?</string>
    <string name="exit_game_message">确定要退出游戏吗?</string>
    <string name="restart_game_message">对方申请重来一局，同意吗?</string>
    <string name="new_game_message">对方邀请您再来一局，同意吗?</string>
    <string name="sure">确定</string>
    <string name="no_sure">取消</string>
    <string name="nick_name">棋色:</string>
    <string name="scanning">搜索设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有一个设备配对过</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">配对过的设备</string>
    <string name="title_other_devices">新找到的可用设备</string>
    <string name="button_scan">搜索</string>
    <string name="connect">连接设备</string>
    <string name="discoverable">设置可被发现</string>
    <string name="bluetooth_disable">你的蓝牙不可用...</string>
    <string name="match_other">请先配对你的对方...</string>
    <string name="connect_to">连接到:</string>
    <string name="enable_start">可以开始了...</string>
    <string name="other_disagree">对方不同意...</string>
</resources>
