<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:background="@drawable/chess_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_gravity="center" android:id="@id/tableId" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="0,1" android:shrinkColumns="0,1">
        <TableRow android:gravity="center|top" android:layout_marginBottom="10.0dip">
            <TextView android:layout_gravity="center" android:text="游戏设置" style="@style/setting_label_font_top" />
        </TableRow>
        <TableRow>
            <TextView android:gravity="center" android:layout_gravity="top" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_head_image" style="@style/setting_label_font_bottom" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RadioButton android:textColor="@color/chessboard_color" android:id="@id/gray_radio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/setting_gray_wolf" android:drawableLeft="@drawable/state_radio" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RadioButton android:textColor="@color/chessboard_color" android:id="@id/red_radio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/setting_red_wolf" android:drawableLeft="@drawable/state_radio" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_who_begin" style="@style/setting_label_font_bottom" />
            <RadioGroup android:orientation="horizontal" android:id="@id/who_begin" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio0_begin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/setting_is" android:drawableLeft="@drawable/state_radio" />
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio2_begin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/setting_no" android:drawableLeft="@drawable/state_radio" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView android:gravity="center" android:layout_gravity="top" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_level" style="@style/setting_label_font_bottom" />
            <RadioGroup android:orientation="vertical" android:id="@id/game_levels" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/RadioButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/setting_level_easy" android:drawableLeft="@drawable/state_radio" />
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/RadioButton03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/setting_level_hard" android:drawableLeft="@drawable/state_radio" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_luozi_music" style="@style/setting_label_font_bottom" />
            <RadioGroup android:orientation="horizontal" android:id="@id/luozi_music" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio0_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/setting_open" android:drawableLeft="@drawable/state_radio" />
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio1_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/setting_close" android:drawableLeft="@drawable/state_radio" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_background_music" style="@style/setting_label_font_bottom" />
            <RadioGroup android:orientation="horizontal" android:id="@id/background_music" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio0_bgm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/setting_open" android:drawableLeft="@drawable/state_radio" />
                <RadioButton android:textColor="@color/chessboard_color" android:id="@id/radio2_bgm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:text="@string/setting_close" android:drawableLeft="@drawable/state_radio" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/AdLinearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</FrameLayout>