<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/chess_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:src="@drawable/qi" android:layout_above="@id/index_introduction" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/setting_font_color" android:id="@id/index_introduction" android:background="@drawable/button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/index_introduction" android:layout_centerInParent="true" />
    <Button android:textColor="@color/setting_font_color" android:id="@id/index_setting" android:background="@drawable/button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/index_setting" android:layout_below="@id/index_introduction" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/setting_font_color" android:id="@id/index_playmode3" android:background="@drawable/button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/index_playmode3" android:layout_below="@id/index_setting" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/setting_font_color" android:id="@id/index_playmode2" android:background="@drawable/button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/index_playmode2" android:layout_below="@id/index_playmode3" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/setting_font_color" android:id="@id/index_playmode1" android:background="@drawable/button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/index_playmode1" android:layout_below="@id/index_playmode2" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/AdLinearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</RelativeLayout>